2003-08-01  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Additional information by Paulo Tribolet Abreu
	  <paulotex@gmx.net>.

2003-08-01  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.c: Additional information by Paulo Tribolet Abreu
	  <paulotex@gmx.net>.

2003-07-30  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Move some variables around to make non-gcc-compilers happy.

2003-07-15  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.[c]: Some indentation fixes.
	  (sq_read_data): Theodore Kilgore
	  <kilgota@banach.math.auburn.edu> tells me that the
	  gp_port_write and gp_port_set_timeout is not needed here.

2003-07-12  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c
	* sq905.[c,h]: New code by Theodore Kilgore
	  <kilgota@banach.math.auburn.edu>

2003-07-07  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c
	* sq905.c: Got some more feedback from Theodore Kilgore
	  <kilgota@banach.math.auburn.edu>

2003-06-30  Lutz Mueller <lutz@users.sourceforge.net>

	* library.c: Implement downloading of pictures.

2003-06-30  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.[c,h]: Updates by the author.

2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>

	* *.[c,h]: First check-in. Not functional yet.